Don't suspend caret blinking on long press

Don't suspend caret if the mouse click comes from touch.
BUG=618888

Review-Url: https://codereview.chromium.org/2053213002
Cr-Commit-Position: refs/heads/master@{#399323}

Former-commit-id: ab92f3d125a34a504610c2412ae8d0bdfcb91f34